# linkmetry

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/web/: index.html  package.json  server.mjs  vite.config.ts
apps/web/scripts/: live-preview-server.py
apps/web/src/: main.tsx  styles.css
crates/bench/: Cargo.toml
crates/bench/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: lib.rs
crates/platform-linux/tests/: linux_fixture.rs
crates/platform-linux/tests/fixtures/block/: sdb
crates/platform-linux/tests/fixtures/sys/devices/pci0000:00/usb2/2-7/2-7.2/2-7.2:1.0/host10/target10:0:0/10:0:0:0/block/sdb/: size
crates/platform-linux/tests/fixtures/sys/devices/pci0000:00/usb2/2-7/2-7.2/2-7.2:1.0/host10/target10:0:0/10:0:0:0/block/sdb/device/: model
crates/platform-linux/tests/fixtures/usb-devices/2-7.2/: idProduct
docs/: architecture.md
scripts/: run-live-preview.sh
