[workspace]
members = [
  "crates/core",
  "crates/platform-linux",
  "crates/bench",
  "crates/cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/travxlabs/linkmetry"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
