[package]
name = "linkmetry-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
linkmetry-platform-linux = { path = "../platform-linux" }
linkmetry-bench = { path = "../bench" }
serde_json.workspace = true
serde.workspace = true
